-
Bug
-
Resolution: Done
-
P4: Low
-
5.7.0 RC
-
qt 5.7 rc.
-
54b4f23df (134-based-refactor)
I use last unrelease version of Qt 5.7.0 RC (http://download.qt.io/snapshots/qt/5.7/5.7.0-rc/482/). It console:
Starting C:\Qt\Qt5.7.0\Examples\Qt-5.7\webenginewidgets\build-demobrowser-Desktop_Qt_5_7_0_MSVC2013_32bit-Debug\debug\demobrowser.exe... QML debugging is enabled. Only use this in a safe environment. [0601/123712:ERROR:scoped_ole_initializer.cc(20)] Multiple OleInitialize() calls for thread 1088 [0601/123712:ERROR:scoped_ole_initializer.cc(20)] Multiple OleInitialize() calls for thread 1088 QWindowsWindow::setGeometry: Unable to set geometry 3000x1875+13+58 on QWidgetWindow/'BrowserMainWindowClassWindow'. Resulting geometry: 2988x1875+13+58 (frame: 13, 58, 13, 13, custom margin: 0, 0, 0, 0, minimum size: 221x191, maximum size: 16777215x16777215). [0601/123722:ERROR:process_win.cc(135)] Unable to terminate process: Access is denied. (0x5) [0601/123722:ERROR:process_win.cc(135)] Unable to terminate process: Access is denied. (0x5)