Do not call Ole(Un)Initialize

The Windows platform plugin already calls OleInitialize. When
ScopedOleInitializer detects that OleInitialize was already called it
will yield an error message. This is not much of a problem but unsettles
users.

Task-number: QTBUG-53746
Change-Id: If5e978c6ef022a7ec0637a2e171fc0f9b3e92a41
Reviewed-by: Alexandru Croitor <alexandru.croitor@qt.io>