chromium/content/browser/browser_main_runner.cc
@@ -105,10 +105,12 @@ class BrowserMainRunnerImpl : public BrowserMainRunner {
       notification_service_.reset(new NotificationServiceImpl);
 
 #if defined(OS_WIN)
+#if !defined(TOOLKIT_QT)
       // Ole must be initialized before starting message pump, so that TSF
       // (Text Services Framework) module can interact with the message pump
       // on Windows 8 Metro mode.
       ole_initializer_.reset(new ui::ScopedOleInitializer);
+#endif
       // Enable DirectWrite font rendering if needed.
       gfx::win::MaybeInitializeDirectWrite();
 #endif  // OS_WIN
@@ -210,7 +212,7 @@ class BrowserMainRunnerImpl : public BrowserMainRunner {
       main_loop_->ShutdownThreadsAndCleanUp();
 
       ui::ShutdownInputMethod();
-  #if defined(OS_WIN)
+  #if defined(OS_WIN) && !defined(TOOLKIT_QT)
       ole_initializer_.reset(NULL);
   #endif
   #if defined(OS_ANDROID)
@@ -237,7 +239,7 @@ class BrowserMainRunnerImpl : public BrowserMainRunner {
 
   scoped_ptr<NotificationServiceImpl> notification_service_;
   scoped_ptr<BrowserMainLoop> main_loop_;
-#if defined(OS_WIN)
+#if defined(OS_WIN) && !defined(TOOLKIT_QT)
   scoped_ptr<ui::ScopedOleInitializer> ole_initializer_;
 #endif
 
