chromium/content/browser/browser_main_runner_impl.h
@@ -56,7 +56,7 @@ class BrowserMainRunnerImpl : public BrowserMainRunner {
 
   std::unique_ptr<NotificationServiceImpl> notification_service_;
   std::unique_ptr<BrowserMainLoop> main_loop_;
-#if BUILDFLAG(IS_WIN)
+#if BUILDFLAG(IS_WIN) && !defined(TOOLKIT_QT)
   std::unique_ptr<ui::ScopedOleInitializer> ole_initializer_;
 #endif
 };
